--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Gambar Profil -->
         <div class="wrap-img">
-            <img src="/WhatsApp Image 2024-02-18 at 18.41.56.jpeg" alt="Gambar Profil">
+            <img src="/WhatsApp Image 2024-10-10 at 18.28.25_241db498.jpg" alt="Gambar Profil">
         </div>
 
         <!-- Nama -->
